fixed text wrapping bug

--- a/src/css/TodoItem.css
+++ b/src/css/TodoItem.css
@@ -16,6 +16,8 @@
   padding: 20px;
   font-size: 20px;
   letter-spacing: 1px;
+  word-break: break-all;
+  word-wrap: break-word;
 }
 
 .todo-footer-container{
